--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -38,7 +38,7 @@ button {
     margin: 5px auto;
     gap:5px;
     padding-bottom: 10px;
-    border-bottom: 2px rgb(114, 184, 255) solid;
+    border-bottom: 5px rgb(114, 184, 255) solid;
 }
 .log-button{
     margin: 10px auto;
@@ -59,4 +59,14 @@ button {
         width: 90%;
     }
     
+}
+@media screen and (min-width: 900px) {
+    .container{
+        /* border: 2px solid rgb(114, 184, 255); */
+        height: fit-content;
+        border-bottom: none;
+    }
+    .menuTitle{
+        background-color: rgb(178, 217, 255);
+    }
 }
