--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,50 @@
-.container{
+.main-container{
+    width: 100%;
+    display: flex;
+}
+.container {
     width: 95%;
     max-width: 700px;
     margin: 10px auto;
 }
-
-.sidenav-container{
+.spacer{
+    display: none;
+}
+.sidenav-container {
     height: 100%;
-    width: 300px;
+    width: 200px;
 }
 
-mat-drawer-container{
+mat-drawer-container {
     background-color: rgb(178, 217, 255);
     height: 100%;
 }
-
-@media screen and (max-width: 450px) {
-    .sidenav-container{
-        width: 200px;
+.sidenav-xl{
+    display: none;
+}
+@media screen and (min-width: 450px) {
+    .sidenav-container {
+        width: 300px;
     }
+
+}
+
+@media screen and (min-width: 900px) {
+    mat-drawer{
+        display: none;
+    }
+    .sidenav-xl{
+        display: inline-block;
+        margin: 0px auto;
+        width: 25%;
+        height: 100%;
+    }
+}
+@media screen and (min-width: 1100px) {
     
+    .spacer{
+        display: inline-block;
+        width: 25%;
+        margin: 10px auto;
+    }
 }
