--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <mat-drawer-container autosize>
   <app-top-bar (menuButtonPressed)="changeSidenavState()"></app-top-bar>
-  <div class="container">
-    <router-outlet></router-outlet>
+  <div class="main-container">
+    <app-sidenav class="sidenav-xl"></app-sidenav>
+    <!-- <div class="spacer"></div> -->
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="spacer"></div>
   </div>
   <mat-drawer position="end" mode="over" [opened]="sidenav" (closedStart)="sidenav = false" class="sidenav-container">
     <app-sidenav (closeSidebar)="changeSidenavState()"></app-sidenav>
