--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,11 +1,13 @@
 <mat-toolbar class="top-bar">
     <div class="title-container">
-        <button mat-icon-button>
+        <button mat-icon-button class="menuButton">
             <mat-icon>share</mat-icon>
         </button>
-        <span>Partite calcetto</span>
-        <button mat-icon-button (click)="menuButtonClick()">
+        <div class="spacer"></div>
+        <span>Calcettistiche</span>
+        <button mat-icon-button (click)="menuButtonClick()" class="menuButton">
             <mat-icon>menu</mat-icon>
         </button>
+        <div class="spacer"></div>
     </div>
 </mat-toolbar>
