--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -20,6 +20,6 @@
         <button class="log-button" color="warn" mat-raised-button (click)="logout()">Logout</button>
     </div>
     }@else {
-    <button class="log-button" mat-raised-button color="warn" (click)="goToLogin()">Login</button>
+    <button class="log-button" mat-raised-button color="warn" (click)="goToLogin()">Home</button>
     }
 </div>
