--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -7,8 +7,8 @@
     @if(!isLogged()){
     <div class="formContainer">
         <div class="buttonContainer">
-            <div class="changeButtons leftRadius" (click)="logOrSign = true" [ngClass]="{'buttonBackground': logOrSign}"><h3>Login</h3></div>
-            <div class="changeButtons rightRadius" (click)="logOrSign = false" [ngClass]="{'buttonBackground': !logOrSign}"><h3>Signin</h3></div>
+            <div class="changeButtons leftRadius" (click)="logOrSign = true" [ngClass]="{'buttonBackground': logOrSign}"><h3><strong>Login</strong></h3></div>
+            <div class="changeButtons rightRadius" (click)="logOrSign = false" [ngClass]="{'buttonBackground': !logOrSign}"><h3><strong>Signin</strong></h3></div>
         </div>
         @if(logOrSign){<app-login (changeLoginState)="logOrSign = !logOrSign"></app-login>}
         @else{<app-signup (changeLoginState)="logOrSign = !logOrSign"></app-signup>}
