--- a/src/app/components/top-bar/top-bar.component.css
+++ b/src/app/components/top-bar/top-bar.component.css
@@ -13,23 +13,26 @@ h1 {
 }
 
 .top-bar {
-    /* display: flex;
-    justify-content: space-between; */
     background-color: rgb(114, 184, 255);
 }
-
+.noCursor{
+    cursor: pointer;
+}
 .spacer {
     display: none;
+    width: 50px;
+}
+.alwaysVisible{
+    display: block;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1100px) {
     .menuButton {
         display: none;
     }
 
     .spacer {
         display: block;
-        margin: auto;
     }
 
 }
