--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar class="top-bar">
     <div class="title-container">
-        <button mat-icon-button class="menuButton">
-            <mat-icon>share</mat-icon>
-        </button>
-        <div class="spacer"></div>
+        <!-- <button mat-icon-button class="menuButton noCursor">
+            <mat-icon></mat-icon>
+        </button> -->
+        <div class="spacer alwaysVisible"></div>
         <span>Calcettistiche</span>
         <button mat-icon-button (click)="menuButtonClick()" class="menuButton">
             <mat-icon>menu</mat-icon>
