--- a/src/app/components/user-personal-page/user-personal-page.component.css
+++ b/src/app/components/user-personal-page/user-personal-page.component.css
@@ -3,6 +3,7 @@ img{
     margin-bottom: 15px;
 }
 .container {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -10,15 +11,13 @@ img{
     gap:5px;
 }
 .dataContainer{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     background-color: rgb(114, 184, 255);
     border-radius: 5px;
-    padding: 5px 10px;
-    width: 90%;
-    max-width: 350px;
 }
 .buttons{
     display: flex;
@@ -31,21 +30,22 @@ button{
     width: 90%;
     max-width: 200px;
 }
-form{
+.formContainer{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 90%;
-    max-width: 340px;
     margin: 0;
     background-color: rgb(114, 184, 255);
-    padding: 15px;
+    padding: 15px 0;
     border-radius: 5px;
     gap:10px;
+    margin: 10px auto;
 }
 .formClass{
-    display: none;
+    width:95%;
+    max-width: 500px;
 }
 .selectedButton{
     background-color: rgb(114, 184, 255);
