--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -14,5 +14,8 @@
         @else{<app-signup (changeLoginState)="logOrSign = !logOrSign"></app-signup>}
     </div>
     }
+    <div class="textContainer">
+        <h2>@if(logOrSign){Fai il login}@else{Registrati} per poter creare la tua squadra e organizzare le partite</h2>
+    </div>
 
 </div>
