--- a/src/app/components/matches-list/matches-list.component.html
+++ b/src/app/components/matches-list/matches-list.component.html
@@ -1,19 +1,39 @@
 @if(matchesList){
-    <h2>{{title}}: {{matchesList.length}}</h2>
-    <table mat-table [dataSource]="matchesList" class="table-test">
-        <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef>Data</th>
-            <td mat-cell *matCellDef="let match">{{match.date | date: 'd-M-yyyy'}}</td>
-        </ng-container>
-        <ng-container matColumnDef="result">
-            <th mat-header-cell *matHeaderCellDef>Risultato</th>
-            <td mat-cell *matCellDef="let match">{{match.goals}}</td>
-        </ng-container>
-        <ng-container matColumnDef="player">
-            <th mat-header-cell *matHeaderCellDef>Giocatori</th>
-            <td mat-cell *matCellDef="let match">{{match.team1}} vs {{match.team2}}</td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/matches', row._id]"></tr>
-    </table>
+<h2>{{title}}: {{matchesList.length}}</h2>
+<div class="searchBar">
+    <mat-form-field class="searchField">
+        <mat-label>Data</mat-label>
+        <input matInput [matDatepicker]="picker" (dateChange)="searchDate($event)" [value]="matchDate">
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <button mat-icon-button color="primary" (click)="resetDate()"><mat-icon>highlight_off</mat-icon></button>
+</div>
+@if(matchesList.length == 0 && matchDate){
+    <h2>Non ci sono partite il giorno <span style="color: red;">{{matchDate | date: 'd-M-yyyy'}}</span></h2>
+}
+<table mat-table [dataSource]="matchesList" class="table-test">
+    <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Data</th>
+        <td mat-cell *matCellDef="let match">{{match.date | date: 'd-M-yyyy'}}</td>
+    </ng-container>
+    <ng-container matColumnDef="result">
+        <th mat-header-cell *matHeaderCellDef>Risultato</th>
+        <td mat-cell *matCellDef="let match">{{match.goals}}</td>
+    </ng-container>
+    <ng-container matColumnDef="player">
+        <th mat-header-cell *matHeaderCellDef>Giocatori</th>
+        <td mat-cell *matCellDef="let match">{{match.team1}} vs {{match.team2}}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/matches', row._id]"></tr>
+</table>
+@if(!matchDate && !finishList){
+<div class="buttonContainer">
+    <button mat-raised-button color="primary" (click)="loadMore()">Carica altre partite</button>
+</div>
+}
+@if(finishList && !matchDate){
+<h2>Non ci sono altre partite</h2>
+}
 }
