--- a/src/app/components/user-list/user-list.component.css
+++ b/src/app/components/user-list/user-list.component.css
@@ -29,7 +29,20 @@ th {
     min-width: 10%;
     max-width: 10%;
 }
-
+.searchBar{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+mat-form-field{
+    width: 70%;
+}
+.loadMoreButton{
+    width:100;
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+}
 @media screen and (max-width: 420px) {
 
     td,
