--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -8,9 +8,6 @@
     <button mat-icon-button color="primary" (click)="search(input.value)"><mat-icon>search</mat-icon></button>
     <button mat-icon-button color="primary" (click)="deleteSearch()"><mat-icon>delete</mat-icon></button>
 </div>
-@if(userList.length == 0 && searchQuery != ''){
-    <h2>Non ci sono giocatori con il nome <span style="color: red;">{{searchQuery}}</span></h2>
-}
 <table mat-table [dataSource]="userList" class="table-test">
     <ng-container matColumnDef="username">
         <th mat-header-cell *matHeaderCellDef>Username</th>
@@ -35,12 +32,15 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/users', row._id, 'stats']"></tr>
 </table>
+@if(userList.length == 0 && searchQuery != ''){
+    <h2>Non ci sono giocatori con username <span style="color: red;">{{searchQuery}}</span></h2>
+}
 @if(searchQuery == '' && !finishList){
     <div class="loadMoreButton">
         <button mat-raised-button color="primary" (click)="loadMore()">Carica altri utenti</button>
     </div>
 }
-@if(finishList){
+@if(finishList && searchQuery == ''){
     <h2>Non ci sono altri utenti</h2>
 }
 }
