--- a/src/app/components/user-stats/user-stats.component.css
+++ b/src/app/components/user-stats/user-stats.component.css
@@ -40,6 +40,10 @@ canvasjs-chart {
     display: flex;
 }
 
+.chart {
+    width: 100%;
+}
+
 @media screen and (max-width: 400px) {
     .playerGoal {
         flex-direction: column;
