--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -47,4 +47,9 @@ mat-drawer-container {
         width: 25%;
         margin: 10px auto;
     }
+    .container {
+        max-width: 3700px;
+        width: 65%;
+        margin: 10px auto;
+    }
 }
