--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -6,6 +6,7 @@
         <h3>Liste</h3>
         <button mat-raised-button (click)="goToUserList()">Giocatori</button>
         <button mat-raised-button (click)="goToMatchList()">Partite</button>
+        <button mat-raised-button (click)="goToGroupList()">Gruppi</button>
     </div>
     @if(isLogged()){
     <div class="button-container">
